# laplacian-eigenmaps

./: .gitignore  README.md  main.tex  pyproject.toml
notebooks/: laplacian_mammoth.ipynb  laplacian_swiss_roll.ipynb  umap_mammoth.ipynb
report/: main.fdb_latexmk  main.fls  main.tex
src/: laplacian_eigenmaps.py  utils.py
