[project]
name = "laplacian-eigenmaps"
version = "0.1.0"
description = "Implementation of Laplacian Eigenmaps dimensionality reduction technique"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "umap-learn>=0.5.9.post2",
]
